Added datatype "xsd:time".

--- a/config/module.ini
+++ b/config/module.ini
@@ -1,6 +1,6 @@
 [info]
 name         = "RDF Datatype"
-description  = "Implement the main W3C Web RDF datatypes (boolean, integer, decimal, date, html and xml) in order to give more semanticity to values of resources."
+description  = "Implement the main W3C Web RDF datatypes (boolean, integer, decimal, date, time, html and xml) in order to give more semanticity to values of resources."
 tags         = "semantic web, rdf, w3c recommendation, linked data"
 license      = "CECILL-2.1"
 author       = "Daniel Berthereau"
