--- a/config/module.ini
+++ b/config/module.ini
@@ -1,12 +1,12 @@
 [info]
 name         = "RDF Datatype"
-description  = "Implement the main W3C Web RDF datatypes (boolean, integer, decimal, date, time, html and xml) in order to give more semanticity to values of resources."
-tags         = "semantic web, rdf, w3c recommendation, linked data"
+description  = "Implement the main W3C RDF datatypes (html, xml, boolean, integer, decimal and date/time) in order to give more semanticity to values of resources."
+tags         = "semantic web, rdf, xsd, w3c recommendation, linked data"
 license      = "CECILL-2.1"
 author       = "Daniel Berthereau"
 author_link  = "https://github.com/Daniel-KM"
 module_link  = "https://github.com/Daniel-KM/Omeka-S-module-RdfDatatype"
 support_link = "https://github.com/Daniel-KM/Omeka-S-module-RdfDatatype/issues"
 configurable = true
-version      = "3.0.1"
+version      = "3.0.2"
 omeka_version_constraint = "^1.1.0"
