Add a config to define the available elements in the main resource forms.

--- a/config/module.ini
+++ b/config/module.ini
@@ -7,6 +7,6 @@ author       = "Daniel Berthereau"
 author_link  = "https://github.com/Daniel-KM"
 module_link  = "https://github.com/Daniel-KM/Omeka-S-module-RdfDatatype"
 support_link = "https://github.com/Daniel-KM/Omeka-S-module-RdfDatatype/issues"
-configurable = false
-version      = "3.0.0"
-omeka_version_constraint = "^1.2.0"
+configurable = true
+version      = "3.0.1"
+omeka_version_constraint = "^1.1.0"
