Updated the description.

--- a/config/module.ini
+++ b/config/module.ini
@@ -1,6 +1,6 @@
 [info]
 name         = "RDF Datatype"
-description  = "Implement the main W3C RDF datatypes (html, xml, boolean, integer, decimal and date/time) in order to give more semanticity to values of resources."
+description  = "Implement the main W3C RDF datatypes (html, xml, boolean, integer, decimal and date/time) in order to simplify user input and to give more semanticity to values of resources."
 tags         = "semantic web, rdf, xsd, w3c recommendation, linked data"
 license      = "CECILL-2.1"
 author       = "Daniel Berthereau"
