--- a/.tx/config
+++ b/.tx/config
@@ -1,7 +1,7 @@
 [main]
 host = https://www.transifex.com
 
-[omeka-s.module-rdf-datatype]
+[omeka-s.module-RdfDatatype]
 file_filter = language/<lang>.po
 source_file = language/template.pot
 source_lang = en
