--- a/config/module.ini
+++ b/config/module.ini
@@ -1,5 +1,5 @@
 [info]
-name         = "RDF Datatype (archived)"
+name         = "RDF Datatype (archived, replaced by DataTypeRdf)"
 description  = "Implement the main W3C RDF datatypes (html, xml, boolean, integer, decimal and date/time) in order to simplify user input and to give more semanticity to values of resources."
 tags         = "semantic web, rdf, xsd, w3c recommendation, linked data"
 license      = "CECILL-2.1"
@@ -8,5 +8,5 @@ author_link  = "https://github.com/Daniel-KM"
 module_link  = "https://github.com/Daniel-KM/Omeka-S-module-RdfDatatype"
 support_link = "https://github.com/Daniel-KM/Omeka-S-module-RdfDatatype/issues"
 configurable = true
-version      = "3.0.4.1"
+version      = "3.0.4.2"
 omeka_version_constraint = "^1.1.0 || ^2.0.0"
